<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="350dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_view_background"
        app:iconifiedByDefault="false"
        app:queryHint="Search" />



    <TextView
        android:id="@+id/See_all"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="332dp"
        android:layout_marginTop="109dp"
        android:text="See All"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="106dp"
        android:fontFamily="@font/poppins_bold"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-16sp"
        android:text="Categories"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/home_breakfast"
        android:layout_width="116dp"
        android:layout_height="111dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="158dp"
        android:src="@drawable/home_breakfast" />

    <TextView

        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="267dp"

        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/breakfast"
       />

    <ImageView
        android:id="@+id/home_salad"
        android:layout_width="109dp"
        android:layout_height="112dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/home_salad" />

    <TextView

        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="270dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/salad"
  />

    <ImageView
        android:id="@+id/home_pasta"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="288dp"
        android:layout_marginTop="145dp"
        android:src="@drawable/home_pasta" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="265dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/pasta"
       />

    <ImageView
        android:id="@+id/home_sandwich"
        android:layout_width="120dp"
        android:layout_height="123dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/home_sandwich" />

    <TextView


        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="447dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/sandwich"
     />

    <ImageView
        android:id="@+id/home_soup"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="323dp"
        android:src="@drawable/home_soup" />

    <TextView

        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="449dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/soup"
     />

    <ImageView
        android:id="@+id/home_pizza"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="293dp"
        android:layout_marginTop="312dp"
        android:src="@drawable/home_pizza" />

    <TextView
        android:id="@+id/pizza"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="294dp"
        android:layout_marginTop="446dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/pizza"

         />

    <TextView
        android:id="@+id/popular_tag"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="531dp"
        android:fontFamily="@font/poppins_bold"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-16sp"
        android:text="@string/popular_tag"
    />

    <TextView
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="617dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/healthy_rec"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/rectangle_1"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="617dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/vegan"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="279dp"
        android:layout_marginTop="617dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/pasta"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="684dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/gluten_free"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="683dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/desserts"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconTint="@color/black"/>


</RelativeLayout>