<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="350dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_view_background"
        app:iconifiedByDefault="false"
        app:queryHint="Search" />


    <TextView
        android:id="@+id/my_text_view"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="332dp"
        android:layout_marginTop="109dp"
        android:text="See All"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="106dp"
        android:fontFamily="@font/poppins_bold"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-16sp"
        android:text="Categories"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/home_breakfast"
        android:layout_width="116dp"
        android:layout_height="111dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="158dp"
        android:src="@drawable/home_breakfast" />

    <TextView

        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="267dp"

        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/breakfast"
        android:textAppearance="@style/breakfast" />

    <ImageView
        android:layout_width="109dp"
        android:layout_height="112dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/home_salad" />

    <TextView
        android:id="@+id/salad"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="270dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/salad"
        android:textAppearance="@style/salad" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="288dp"
        android:layout_marginTop="145dp"
        android:src="@drawable/home_pasta" />

    <TextView
        android:id="@+id/pasta"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="303dp"
        android:layout_marginTop="266dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/pasta"
        android:textAppearance="@style/pasta" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="123dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/home_sandwich" />

    <TextView
        android:id="@+id/sandwich"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="447dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/sandwich"
        android:textAppearance="@style/sandwich" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="323dp"
        android:src="@drawable/home_soup" />

    <TextView
        android:id="@+id/soup"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="446dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/soup"
        android:textAppearance="@style/soup" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="293dp"
        android:layout_marginTop="312dp"
        android:src="@drawable/home_pizza" />

    <TextView
        android:id="@+id/pizza"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="294dp"
        android:layout_marginTop="446dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-2sp"
        android:text="@string/pizza"

        android:textAppearance="@style/pizza" />

    <TextView
        android:id="@+id/popular_tag"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="522dp"
        android:fontFamily="@font/poppins_bold"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-16sp"
        android:text="@string/popular_tag"
        android:textAppearance="@style/popular_tag" />

    <TextView
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="597dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/healthy_rec"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rectangle_1"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="597dp"
        android:text="@string/vegan"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/rounded_rectangle1" />

    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="279dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pasta"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/rounded_rectangle1" />

    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="652dp"
        android:background="@drawable/rounded_rectangle1"
        android:gravity="center"
        android:text="@string/gluten_free"
        android:textAlignment="center" />

    <TextView

        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="653dp"
        android:text="@string/desserts"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/rounded_rectangle1" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
 >


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>